--- a/src/scss/base/_index.scss
+++ b/src/scss/base/_index.scss
@@ -9,4 +9,6 @@ $prefix: if(variable-exists(prefix), #{$prefix}, "");
 @import "mixins/utilites";
 @import "root";
 @import "normalize";
-// @import "fonts";
+
+@import "../layouts/layout_000/index.scss";
+
