--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -1,34 +1,26 @@
 //fonts
-$google-font: "https://fonts.googleapis.com/css?family=Ubuntu:400,500";
+$google-font: 'https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap';
 $prefix: prefix- !default;
 $baseFontSize: 16px;
-$baseFontFamily: "Ubuntu", sans-serif;
+$baseFontFamily: "Playfair Display", sans-serif;
+$lightFontWeight: 300;
 $mediumFontWeight: 500;
-
-$mobilePadding: (12px / $baseFontSize) * 1rem;
-$desktopPadding: 1rem;
+$semiBoldFontWeight: 600;
+$boldFontWeight: 700;
+$extraBoldFontWeight: 800;
+$blackFontWeight: 900;
 
 // Paths
 
-$imagesPath: "../i/";
-$fontsPath: "../fonts/";
-$usersFilesPath: "../userfiles/";
+$imagesPath: "../../../i/";
 
 // Colors
 $black: #000000;
 $white: #ffffff;
-$blue: #0d6efd !default;
-$indigo: #6610f2 !default;
-$purple: #6f42c1 !default;
-$pink: #d63384 !default;
-$red: #dc3545 !default;
+$red: #dc3545;
+
 
 $colors: (
   "black": $black,
   "white": $white,
-  "blue": $blue,
-  "indigo": $indigo,
-  "purple": $purple,
-  "pink": $pink,
-  "red": $red,
 ) !default;
