--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -1,7 +1,15 @@
 //fonts
-$google-font: 'https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap';
-$prefix: prefix- !default;
+@font-face {
+	font-family: 'SofiaPro';
+	font-display: swap;
+	src: local("O"), url("../../fonts/SofiaProRegular.woff") format("woff");
+	font-style: normal;
+}
+
+$google-font: 'https://fonts.googleapis.com/css2?family=Playfair+Display&family=Sofia+Sans+Condensed&display=swap';
+$prefix: artem- !default;
 $baseFontSize: 16px;
+$fontSofiaPro: 'SofiaPro';
 $baseFontFamily: "Playfair Display", sans-serif;
 $lightFontWeight: 300;
 $mediumFontWeight: 500;
@@ -17,10 +25,11 @@ $imagesPath: "../../../i/";
 // Colors
 $black: #000000;
 $white: #ffffff;
-$red: #dc3545;
+$red: #f0002f;
 
 
 $colors: (
   "black": $black,
   "white": $white,
+  "red": $red,
 ) !default;
