--- a/src/scss/layouts/layout_000/_deals.scss
+++ b/src/scss/layouts/layout_000/_deals.scss
@@ -1,11 +1,17 @@
 .deals {
-    background: url('#{$imagesPath}slideshow-v1.jpg') center center no-repeat;
+    background: url('#{$imagesPath}slideshow-v1.jpg') 50% 100% no-repeat;
+    background-size: cover;
     color: $white;
+    padding-top: 100px;
+    padding-left: 5px;
+    @include e(text){
+        margin: 0;
+        padding-bottom: 15px;
+    }
     @include e(first-p){
-        padding-top: 100px;
+        
         text-transform: uppercase;
         font-weight: $mediumFontWeight;
-        padding-bottom: 15px;
         letter-spacing: 4px;
     }
 
@@ -15,5 +21,18 @@
 
     @include e(second-p){
         line-height: 1.5;
+    }
+
+    @include e(btn){
+        border: 1px solid $white;
+        padding: 15px 30px;
+        margin-top: 30px;
+        margin-bottom: 70px;
+        font-family: $fontSofiaPro;
+        @include e(text){
+           text-transform: uppercase;
+           text-decoration: none;
+           color: $white;
+        }
     }
 }
