--- a/src/scss/layouts/layout_000/_deals.scss
+++ b/src/scss/layouts/layout_000/_deals.scss
@@ -4,6 +4,7 @@
     color: $white;
     padding-top: 100px;
     padding-left: 5px;
+    font-family: $baseFontFamily;
     @include e(text){
         margin: 0;
         padding-bottom: 15px;
@@ -28,7 +29,6 @@
         padding: 15px 30px;
         margin-top: 30px;
         margin-bottom: 70px;
-        font-family: $fontSofiaPro;
         @include e(text){
            text-transform: uppercase;
            text-decoration: none;
