--- a/src/scss/layouts/layout_000/_general.scss
+++ b/src/scss/layouts/layout_000/_general.scss
@@ -13,3 +13,17 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+.main {
+  font-family: $fontSofiaPro;
+}
+
+.new-arrives{
+  display: grid;
+  grid-template-columns: repeat(6, minmax(130px, 1fr));
+  @include e(h2){
+    grid-column: 1 / -1;
+    text-align: center;
+    font-weight: 400;
+  }
+}
