--- a/src/scss/base/mixins/_utilites.scss
+++ b/src/scss/base/mixins/_utilites.scss
@@ -106,7 +106,7 @@
                         text-align: center;
                         padding-bottom: 2px;
                     }
-                    background: $colorForTimeBlocks;
+                    background: $colorForBlocks;
                     border-radius: 2px;
                     width: 28px;
                     margin: 0 3px 0;
