--- a/src/scss/base/mixins/_utilites.scss
+++ b/src/scss/base/mixins/_utilites.scss
@@ -147,7 +147,7 @@
 
 @mixin stylesForNewProduct($num){
   @include e(figure){
-    padding-left: 5px;
+    
     @include e($num){
       margin: 0;
         @include m(img){
@@ -155,4 +155,30 @@
         }
     }
 }
+
+  @include e(figcaption){
+    @include e($num){
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      @include e(name-box){
+        @include m(a){
+          text-decoration: none;
+          color: $black;
+        }
+      }
+      @include e(p){
+        font-size: 15px;
+        font-weight: $boldFontWeight;
+        @include m(price){
+          color: $red;
+        }
+
+        @include m(price-old){
+          color: $gray;
+          text-decoration: line-through;
+        }
+      }
+    }
+  }
 }
