--- a/src/scss/layouts/layout_000/_foto.scss
+++ b/src/scss/layouts/layout_000/_foto.scss
@@ -1,4 +1,6 @@
 .foto{
+    padding-left: 15px;
+    padding-right: 15px;
     display: grid;
     grid-template-areas: 
     "foto1"
@@ -7,13 +9,15 @@
     margin: 5px;
     @include e(first){
         grid-area: foto1;
-        background: url('#{$imagesPath}banner-v1-2.jpg') no-repeat;
+        background: url('#{$imagesPath}banner-v1-2.jpg') center center no-repeat;
+        background-size: cover;
         @include styleForFotoBlocks()
     }
 
     @include e(second){
         grid-area: foto2;
-        background: url('../../../i/banner-v1-1.jpg') no-repeat;
+        background: url('../../../i/banner-v1-1.jpg') center center no-repeat;
+        background-size: cover;
         @include styleForFotoBlocks();
     }
 }
