--- a/src/scss/layouts/layout_000/_veggie-pizza.scss
+++ b/src/scss/layouts/layout_000/_veggie-pizza.scss
@@ -1,5 +1,6 @@
 .veggie-pizza {
     background: url('#{$imagesPath}banner-v5.jpg') center center no-repeat;
+    background-size: cover;
     margin: 50px 0;
     height: 80vh;
     position: relative;
