--- a/src/scss/base/mixins/_utilites.scss
+++ b/src/scss/base/mixins/_utilites.scss
@@ -43,12 +43,11 @@
   & > *{
             margin: 0;
         }
-        background-size: cover;
         margin-bottom: 10px;
         @include e(h2){
             font-size: 25px;
             padding-top: 55px;
-            padding-left: 25px;
+            padding-left: 10px;
             padding-bottom: 25px;
         }
 
@@ -56,7 +55,7 @@
             background-color: $white;
             letter-spacing: 2px;
             text-transform: uppercase;
-            margin-left: 25px;
+            margin-left: 10px;
             padding: 15px 40px;
             font-size: 11px;
             font-weight: $mediumFontWeight;
@@ -219,4 +218,34 @@
         }
     }
 }
+}
+
+@mixin stylesForNewArrives600px ($number){
+  @include e(product){
+    @include e($number){
+      @include e(figure){
+        @include m(sale){
+          top: 10px;
+          right: 10px;
+      }
+  
+          @include e(time){
+              
+              @include e(ul){
+  
+                  @include m(li){
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    font-size: 16px;
+                    font-weight: $normalFontWeight;
+                     width: 64px;
+                     height: 65px;
+                  }
+              }
+          }
+      }
+  }
+  }
 }
