--- a/src/scss/layouts/layout_000/_instagram.scss
+++ b/src/scss/layouts/layout_000/_instagram.scss
@@ -1,9 +1,9 @@
 .instagram {
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 7px;
+    padding-right: 7px;
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: repeat(2, minmax(130px, auto));
+    grid-template-columns: repeat(2, minmax(130px, 1fr));
     @include e(h2){
         grid-column: 1 / -1;
         text-align: center;
