--- a/src/scss/layouts/layout_000/_new-arrives.scss
+++ b/src/scss/layouts/layout_000/_new-arrives.scss
@@ -1,9 +1,9 @@
 .new-arrives{
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 7px;
+    padding-right: 7px;
     display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(2, minmax(130px, 1fr));// 5 after js
+    grid-gap: 14px;
+    grid-template-columns: repeat(2, minmax(130px, auto));// 5 after js
     @include e(h2){
       grid-column: 1 / -1;
       text-align: center;
