--- a/src/scss/layouts/layout_000/_propose.scss
+++ b/src/scss/layouts/layout_000/_propose.scss
@@ -1,9 +1,9 @@
 .propose{
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 7px;
+    padding-right: 7px;
     display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(2, minmax(130px, auto));
+    grid-gap: 15px;
+    grid-template-columns: repeat(2, minmax(130px, 1fr));
 
     @include e(h2){
         grid-column: 1 / -1;
