--- a/src/scss/base/_index.scss
+++ b/src/scss/base/_index.scss
@@ -20,4 +20,7 @@ $prefix: if(variable-exists(prefix), #{$prefix}, "");
   @import "../layouts/layout_768/index";
 }
 
+@media(min-width: 992px){
+  @import "../layouts/layout_992/index";
+}
 
