--- a/src/scss/layouts/layout_768/_new-arrives.scss
+++ b/src/scss/layouts/layout_768/_new-arrives.scss
@@ -2,6 +2,6 @@
   padding-left: 15px;
   padding-right: 15px;
   grid-gap: 30px;
-  grid-template-columns: repeat(2, minmax(130px, 485px));// 5 after js
+  grid-template-columns: repeat(2, minmax(130px, 1fr));// 5 after js
 
   }
