--- a/src/scss/layouts/layout_600/_new-arrives.scss
+++ b/src/scss/layouts/layout_600/_new-arrives.scss
@@ -2,5 +2,11 @@
   @include stylesForNewArrives600px(first);
 
   @include stylesForNewArrives600px(second);
+
+  @include stylesForNewArrives600px(third);
 }
 
+
+.close {
+  display: block;
+}
