--- a/src/scss/layouts/layout_992/_index.scss
+++ b/src/scss/layouts/layout_992/_index.scss
@@ -2,3 +2,7 @@
 @import "propose";
 @import "instagram";
 @import "footer";
+@import "header";
+@import "deals";
+@import "advantages";
+@import "new-arrives";
