--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -31,6 +31,7 @@ $gray: #979797;
 $colorForBlocks: #ffffffe6;
 $colorFooterTeam: rgb(108, 108, 108);
 $colorFooterLine: rgb(238, 238, 238);
+$colorNav992px: #f8f8f8;
 
 $colors: (
   "black": $black,
@@ -40,4 +41,5 @@ $colors: (
   "colorForBlocks": $colorForBlocks,
   "colorFooterTeam": $colorFooterTeam,
   "colorFooterLine": $colorFooterLine,
+  "colorNav992px":$colorNav992px,
 ) !default;
