--- a/src/scss/layouts/layout_000/_header.scss
+++ b/src/scss/layouts/layout_000/_header.scss
@@ -1,5 +1,6 @@
 .header {
-    position: fixed;
+    position: sticky;
+    top: 0;
     z-index: 1;
     width: 100%;
     padding: 15px;
@@ -61,4 +62,8 @@
        }
     }
 
+}
+
+.header-for-992px{
+    display: none;
 }
