--- a/src/scss/base/mixins/_utilites.scss
+++ b/src/scss/base/mixins/_utilites.scss
@@ -235,14 +235,14 @@
               @include e(ul){
   
                   @include m(li){
+                    width: 64px;
+                    height: 65px;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
                     font-size: 16px;
                     font-weight: $normalFontWeight;
-                     width: 64px;
-                     height: 65px;
                   }
               }
           }
@@ -264,4 +264,17 @@
         text-align: start;
     }
 }
+}
+
+@mixin scaleForNewArrives ($num){
+  @include e($num){
+    @include e(figure){
+      @include m(img){
+        &:hover {
+          transform: scale(1.1);
+          transition: all 1s;
+        }
+      }
+    }
+  }
 }
