--- a/src/scss/layouts/layout_000/_header.scss
+++ b/src/scss/layouts/layout_000/_header.scss
@@ -43,6 +43,7 @@
        @include e(right){
             @include e(img){
                 width: 22px;
+                height: 22px;
                 @include m(padding){
                     margin-right: 16px;
                 }
