--- a/src/scss/layouts/layout_000/_instagram.scss
+++ b/src/scss/layouts/layout_000/_instagram.scss
@@ -1,10 +1,13 @@
 .instagram {
+    margin-top: 20px;
     padding-left: 7px;
     padding-right: 7px;
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat(2, minmax(130px, 1fr));
     @include e(h2){
+        margin: 0;
+        padding-bottom: 15px;
         grid-column: 1 / -1;
         text-align: center;
         font-weight: 400;
