--- a/src/scss/layouts/layout_000/_new-arrives.scss
+++ b/src/scss/layouts/layout_000/_new-arrives.scss
@@ -1,10 +1,12 @@
 .new-arrives{
+    margin-top: 20px;
     padding-left: 7px;
     padding-right: 7px;
     display: grid;
     grid-gap: 14px;
     grid-template-columns: repeat(2, minmax(130px, auto));// 5 after js
     @include e(h2){
+      margin-bottom: 20px;
       grid-column: 1 / -1;
       text-align: center;
       font-weight: 400;
@@ -14,6 +16,10 @@
       @include styleForNewArrives(first);
 
       @include styleForNewArrives(second);
+
+      @include styleForNewArrives(third);
+
+      @include styleForNewArrives(fourth);
     }
   }
 
