--- a/src/scss/layouts/layout_000/_veggie-pizza.scss
+++ b/src/scss/layouts/layout_000/_veggie-pizza.scss
@@ -1,7 +1,7 @@
 .veggie-pizza {
     background: url('#{$imagesPath}banner-v5.jpg') center center no-repeat;
     background-size: cover;
-    margin: 50px 0;
+    margin-top: 70px;
     height: 80vh;
     position: relative;
     @include e(shop-block){
