--- a/src/scss/layouts/layout_992/_propose.scss
+++ b/src/scss/layouts/layout_992/_propose.scss
@@ -1,3 +1,9 @@
 .propose{
     grid-template-columns: repeat(4, minmax(130px, 1fr));
+    @include e(h2){
+        padding-top: 40px;
+        padding-bottom: 20px;
+        font-size: 36px;
+        font-weight: $mediumFontWeight;
+    }
 }
