--- a/src/scss/layouts/layout_000/_foto.scss
+++ b/src/scss/layouts/layout_000/_foto.scss
@@ -3,10 +3,11 @@
     padding-right: 15px;
     display: grid;
     margin: 5px;
+    position: relative;
     @include e(first){
         background: url('#{$imagesPath}banner-v1-2.jpg') center center no-repeat;
         background-size: cover;
-        @include styleForFotoBlocks()
+        @include styleForFotoBlocks();
     }
 
     @include e(second){
