--- a/src/scss/layouts/layout_000/_advantages.scss
+++ b/src/scss/layouts/layout_000/_advantages.scss
@@ -16,7 +16,7 @@
     }
 
     @include e(second){
-        margin: 0;
+      
         grid-column: 1; // 2 after js
         grid-row: 1;        
     }
@@ -27,17 +27,11 @@
         display: none;
     }
 
-    @include e(img){
-        text-align: center;
-        margin: 0;
-    }
-
     @include e(info__h2){
         margin: 0;
-        font-size: 18px;
+        font-size: 17px;
         text-transform: uppercase;
         font-weight: $mediumFontWeight;
-        letter-spacing: 0.2rem;
         padding-top: 30px;
         padding-bottom: 9px;
     }
@@ -47,5 +41,10 @@
         text-align: center;
         font-size: 14px;
     }
+
+}
+
+.advantages__img{
+    text-align: center;
 }
 
