--- a/src/scss/layouts/layout_000/_header.scss
+++ b/src/scss/layouts/layout_000/_header.scss
@@ -5,6 +5,7 @@
     width: 100%;
     padding: 15px;
     background-color: $white;
+    transition: all .3s ease;
     .top-menu {
         display: flex;
         justify-content: space-between;
