--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -32,6 +32,7 @@ $colorForBlocks: #ffffffe6;
 $colorFooterTeam: rgb(108, 108, 108);
 $colorFooterLine: rgb(238, 238, 238);
 $colorNav992px: #f8f8f8;
+$colorHeaderIsShow: rgba(26, 26, 26, 0.9);
 
 $colors: (
   "black": $black,
@@ -41,5 +42,6 @@ $colors: (
   "colorForBlocks": $colorForBlocks,
   "colorFooterTeam": $colorFooterTeam,
   "colorFooterLine": $colorFooterLine,
-  "colorNav992px":$colorNav992px,
+  "colorNav992px": $colorNav992px,
+  "colorHeaderIsShow": $colorHeaderIsShow,
 ) !default;
