--- a/src/scss/layouts/layout_992/_instagram.scss
+++ b/src/scss/layouts/layout_992/_instagram.scss
@@ -4,4 +4,67 @@
     @include e(h2){
         font-size: 36px;
     }
+
+    @include e(box-img){
+        height: 100%;
+        position: relative;
+        overflow: hidden;
+        
+        @include m(i){
+            height: 100%;
+            transition: all .3s linear;
+        }
+        @include e(text-before){
+            display: block;
+            &::before{
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: rgba(0,0,0,.6);
+                opacity: 0;
+                transition: all .3s linear;
+                cursor: pointer;
+            }
+
+            &:hover::before{
+                opacity: 1;
+            }
+        }
+
+        @include e(text){
+            position: absolute;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            opacity: 0;
+            cursor: pointer;
+            
+
+            @include m(icon){
+                font-size: 40px;
+                color: $white;
+            }
+
+            @include m(title){
+                color: $white;
+                font-size: 18px;
+                font-weight: 500;
+            }
+        }
+
+        &:hover .instagram__box-img__text{
+            opacity: 1;    
+            transition: all .2s linear;
+        }
+
+        &:hover .instagram__box-img_i{
+            transform: scale(1.1);
+        }
+    }
 }
