--- a/src/scss/layouts/layout_992/_header.scss
+++ b/src/scss/layouts/layout_992/_header.scss
@@ -53,6 +53,7 @@
        }
 
        @include e(ul-menu){
+        display: none;
             position: absolute;
             top: 50px;
             left: -25px;
