--- a/src/scss/layouts/layout_992/_deals.scss
+++ b/src/scss/layouts/layout_992/_deals.scss
@@ -16,6 +16,7 @@
         &:hover {
             background: $red;
             border: 1px solid transparent;
+            transition: all .2s linear;
         }
     }
 }
