--- a/src/scss/layouts/layout_992/_propose.scss
+++ b/src/scss/layouts/layout_992/_propose.scss
@@ -6,4 +6,14 @@
         font-size: 36px;
         font-weight: $mediumFontWeight;
     }
+
+    @include e(figure){
+        @include stylesForPropose(first);
+    }
 }
+
+.propose__figure__first__before:hover .propose__figure__first__elements > div{
+    transform: translateY(0);
+    cursor: pointer;
+}
+
