--- a/src/scss/layouts/layout_600/_advantages.scss
+++ b/src/scss/layouts/layout_600/_advantages.scss
@@ -1,5 +1,5 @@
 .advantages{
-    grid-template-columns: repeat(2, 1fr);
+    /* grid-template-columns: repeat(2, 1fr);
     
     @include e(first){
         grid-column: 1;
@@ -12,6 +12,6 @@
         margin: 0;
         grid-column: 2;
         grid-row: 1;        
-    }
+    } */
 }
 
