--- a/src/scss/layouts/layout_600/_new-arrives.scss
+++ b/src/scss/layouts/layout_600/_new-arrives.scss
@@ -6,6 +6,10 @@
   @include stylesForNewArrives600px(third);
 
   @include stylesForNewArrives600px(fourth);
+
+  @include stylesForNewArrives600px(fifth);
+
+
 }
 
 
