--- a/src/scss/layouts/layout_000/_new-arrives.scss
+++ b/src/scss/layouts/layout_000/_new-arrives.scss
@@ -2,9 +2,6 @@
     margin-top: 20px;
     padding-left: 7px;
     padding-right: 7px;
-    display: grid;
-    grid-gap: 14px;
-    grid-template-columns: repeat(2, minmax(130px, auto));// 5 after js
     @include e(h2){
       margin-bottom: 20px;
       grid-column: 1 / -1;
@@ -20,6 +17,9 @@
       @include styleForNewArrives(third);
 
       @include styleForNewArrives(fourth);
+
+      @include styleForNewArrives(fifth);
+
     }
   }
 
