--- a/src/scss/layouts/layout_992/_new-arrives.scss
+++ b/src/scss/layouts/layout_992/_new-arrives.scss
@@ -8,11 +8,15 @@
     @include scaleForNewArrives(second);
     @include scaleForNewArrives(third);
     @include scaleForNewArrives(fourth);
+    @include scaleForNewArrives(fifth);
+
 
     @include fontSizeForPriceNewArrives(first);
     @include fontSizeForPriceNewArrives(second);
     @include fontSizeForPriceNewArrives(third);
     @include fontSizeForPriceNewArrives(fourth);
+    @include fontSizeForPriceNewArrives(fifth);
+
   }
 
   @include e(h2){
